# Snowflake_Engine

./: .gitignore  CMakeLists.txt  build.sh  run.sh
engine/: CMakeLists.txt  Makefile  cmake_install.cmake  compile_flags.txt
engine/assets/materials/: default_mat.sfmt
engine/include/: asserts.hpp  foo.hpp  logger.hpp  sf_logger.hpp  sf_platform.hpp  sf_types.hpp  sf_util.hpp
engine/include/core/: sf_application.hpp  sf_asserts.hpp  sf_logger.hpp  sf_util.hpp
engine/include/platform/: sf_platform.hpp  sf_platform_macros.hpp  wayland-util-custom.hpp
engine/include/sf_allocators/: arena_allocator.hpp  free_list_allocator.hpp  general_purpose_allocator.hpp  linear_allocator.hpp  stack_allocator.hpp
engine/include/sf_containers/: bitset.hpp  dynamic_array.hpp  dynamic_array_self_managed.hpp  fixed_array.hpp  hashmap.hpp  linked_array_list.hpp  optional.hpp  result.hpp  traits.hpp
engine/include/sf_core/: application.hpp  asserts_sf.hpp  clock.hpp  constants.hpp  defines.hpp  entry.hpp  event.hpp  game_types.hpp  input.hpp  io.hpp  logger.hpp  memory_sf.hpp  model.hpp  parsing.hpp  random_gen.hpp  types.hpp  util.hpp  utility.hpp  utils.hpp
engine/include/sf_ds/: allocator.hpp  array_list.hpp  dynamic_array.hpp  fixed_array.hpp  hashmap.hpp  iterator.hpp  linked_array_list.hpp  llist.hpp  optional.hpp  traits.hpp
engine/include/sf_platform/: defines.hpp  platform.hpp  platform_mem_alloc_templated.hpp  wl_relative_pointer_glue.hpp
engine/include/sf_renderer/: renderer.hpp
engine/include/sf_tests/: test_manager.hpp
engine/include/sf_vulkan/: allocator.hpp  buffer.hpp  command_buffer.hpp  descriptor.hpp  device.hpp  frame.hpp  image.hpp  material.hpp  mesh.hpp  pipeline.hpp  renderer.hpp  resource.hpp  shaders.hpp  shared_types.hpp  swapchain.hpp  synch.hpp  texture.hpp  types.hpp  utils.hpp  vk_memory.hpp
engine/lib/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
engine/lib/docs/: Makefile  cmake_install.cmake
engine/lib/src/: Makefile  cmake_install.cmake
engine/shaders/: shader.slang
engine/src/: foo.cpp  logger.cpp  sf_logger.cpp  sf_platform_win32.cpp
engine/src/core/: sf_application.cpp  sf_logger.cpp
engine/src/platform/: sf_platform_linux_wl.cpp  sf_platform_linux_x11.cpp  sf_platform_win32.cpp  xdg-shell-protocol.cpp
engine/src/sf_allocators/: arena_allocator.cpp  free_list_allocator.cpp  general_purpose_allocator.cpp  linear_allocator.cpp  stack_allocator.cpp
engine/src/sf_core/: application.cpp  clock.cpp  entry.cpp  event.cpp  game_types.cpp  input.cpp  io.cpp  logger.cpp  memory_sf.cpp  model.cpp  random_gen.cpp  utility.cpp
engine/src/sf_platform/: platform.cpp  platform_linux_wl.cpp  platform_linux_x11.cpp  platform_win32.cpp  xdg-shell-protocol.cpp
engine/src/sf_renderer/: renderer.cpp
engine/src/sf_tests/: fixed_array_test.cpp  free_list_allocator_test.cpp  test_manager.cpp
engine/src/sf_vulkan/: allocator.cpp  buffer.cpp  command_buffer.cpp  descriptor.cpp  device.cpp  frame.cpp  image.cpp  material.cpp  mesh.cpp  pipeline.cpp  renderer.cpp  resource.cpp  shaders.cpp  swapchain.cpp  synch.cpp  texture.cpp  utils.cpp
testbed/: CMakeLists.txt  Makefile  cmake_install.cmake  compile_flags.txt
testbed/include/: game.hpp  header.hpp
testbed/src/: entry.cpp  game.cpp  main.cpp
